# sqlalchemy-utils

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  MANIFEST.in  README.md  README.rst  RELEASE.md  RELEASING.md  ROADMAP.rst  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tests.py  tox.ini
.ci/: install_mssql.sh
.github/workflows/: lint.yaml  test.yaml
.travis/: install_mssql.sh
docs/: Makefile  aggregates.rst  coercion.rst  conf.py  data_types.rst  database_helpers.rst  decorators.rst  eav.rst  foreign_key_helpers.rst  generic_relationship.rst  index.rst  installation.rst  internationalization.rst  listeners.rst  make.bat  model_helpers.rst  models.rst  observers.rst  orm_helpers.rst  range_data_types.rst  testing.rst  utilities.rst  utility_classes.rst  view.rst
requirements/: README.rst
requirements/docs/: pyproject.toml  requirements.txt
sqlalchemy_utils/: __init__.py  aggregates.py  asserts.py  batch.py  compat.py  decorators.py  eav.py  exceptions.py  expression_parser.py  expressions.py  functions.py  generic.py  i18n.py  listeners.py  materialized_view.py  merge.py  models.py  observer.py  operators.py  path.py  proxy_dict.py  query_chain.py  types.py  utils.py  view.py
sqlalchemy_utils/functions/: __init__.py  batch_fetch.py  database.py  defer_except.py  foreign_keys.py  mock.py  orm.py  render.py  sort_query.py
sqlalchemy_utils/primitives/: __init__.py  country.py  currency.py  ltree.py  number_range.py  utils.py  weekday.py  weekdays.py
sqlalchemy_utils/relationships/: __init__.py  chained_join.py  select_aggregate.py
sqlalchemy_utils/types/: __init__.py  arrow.py  bit.py  choice.py  color.py  country.py  currency.py  datetime.py  email.py  encrypted.py  enriched_datetime.py  enum.py  eui.py  file.py  gender.py  ip_address.py  json.py  locale.py  ltree.py  money.py  number_range.py  password.py  pendulum.py  pg_composite.py  phone_number.py  price.py  range.py  scalar_coercible.py  timezone.py  (+5 more)
tests/: __init__.py  conftest.py  mixins.py  test_aggregates.py  test_arrow.py  test_asserts.py  test_auto_delete_orphans.py  test_batch_fetch.py  test_case_insensitive_comparator.py  test_coercion_listener.py  test_color.py  test_compat.py  test_defer_except.py  test_eav.py  test_email.py  test_expression_parser.py  test_expressions.py  test_generates.py  test_generic.py  test_instant_defaults_listener.py  test_instrumented_list.py  test_ip_address.py  test_materialized_view.py  test_merge.py  test_models.py  test_number_range.py  test_password.py  test_path.py  test_phonenumber_type.py  test_proxy_dict.py  test_query_chain.py  test_scalar_list.py  test_sort_query.py  test_table_name.py  test_timezone.py  test_translation_hybrid.py  test_tsvector_type.py  test_utility_functions.py  test_uuid.py  test_views.py  (+1 more)
(+137 files in other folders)
