[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SQLAlchemy-Utils"
version = "0.42.0"
description = "Various utility functions for SQLAlchemy."
readme = "README.rst"
license = "BSD-3-Clause"
authors = [
    {name = "Konsta Vesterinen", email = "konsta@fastmonkeys.com"},
    {name = "Ryan Leckey"},
    {name = "Janne Vanhala"},
    {name = "Vesa Uimonen"}
]
requires-python = ">=3.9"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "SQLAlchemy>=1.4",
]

[project.urls]
Homepage = "https://github.com/kvesteri/sqlalchemy-utils"

[project.optional-dependencies]
test = [
    "pytest==7.4.4",
    "Pygments>=1.2",
    "Jinja2>=2.3",
    "docutils>=0.10",
    "flexmock>=0.9.7",
    "psycopg>=3.1.8",
    "psycopg2>=2.5.1",
    "psycopg2cffi>=2.8.1",
    "pg8000>=1.12.4",
    "pytz>=2014.2",
    "python-dateutil>=2.6",
    "pymysql",
    "flake8>=2.4.0",
    "isort>=4.2.2",
    "pyodbc",
]
babel = ["Babel>=1.3"]
arrow = ["arrow>=0.3.4"]
pendulum = ["pendulum>=2.0.5"]
intervals = ["intervals>=0.7.1"]
phone = ["phonenumbers>=5.9.2"]
password = ["passlib >= 1.6, < 2.0"]
color = ["colour>=0.0.4"]
timezone = ["python-dateutil"]
url = ["furl >= 0.4.1"]
encrypted = ["cryptography>=0.6"]
test_all = [
    "pytest==7.4.4",
    "Pygments>=1.2",
    "Jinja2>=2.3",
    "docutils>=0.10",
    "flexmock>=0.9.7",
    "psycopg>=3.1.8",
    "psycopg2>=2.5.1",
    "psycopg2cffi>=2.8.1",
    "pg8000>=1.12.4",
    "pytz>=2014.2",
    "python-dateutil>=2.6",
    "pymysql",
    "flake8>=2.4.0",
    "isort>=4.2.2",
    "pyodbc",
    "Babel>=1.3",
    "arrow>=0.3.4",
    "pendulum>=2.0.5",
    "intervals>=0.7.1",
    "phonenumbers>=5.9.2",
    "passlib >= 1.6, < 2.0",
    "colour>=0.0.4",
    "python-dateutil",
    "furl >= 0.4.1",
    "cryptography>=0.6",
]

[tool.ruff]
extend-exclude = [
    "docs",
    "migrations",
    "tests",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E231", "E402", "E702", "E501", "F403", "F541", "E713"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401", "F811"]

[tool.ruff.lint.isort]
known-first-party = ["sqlalchemy_utils"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
